# maturin-workspace-playground

./: Cargo.toml  README.md  pyproject.toml
python/maturin_workspace_playground/: __init__.py  _lowlevel.cp311-win_amd64.pyd
python/tests/: test_main.py
rust/app/: Cargo.toml
rust/python-api/: Cargo.toml
rust/python-api/src/: lib.rs
