[package]
name = "python-api"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "maturin_workspace_playground"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.3"
app = { path = "../app" }